--- a/me.html
+++ b/me.html
@@ -9,6 +9,18 @@
 <link rel="stylesheet" href="me-mediaqurries.css">
 
 <body>
+    <nav id="desktop-nav">
+        <div class="logo">DHARMENDRA SHAW</div>
+        <div>
+            <ul class="nav-links">
+                <li><a href="#about">About</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#projects">Porjects</a></li>
+                <li><a href="#contacts">Contacts</a></li>
+
+            </ul>
+        </div>
+    </nav>
     <script src="me-scripts.js"></script>
 </body>
 </html>
