--- a/me.html
+++ b/me.html
@@ -17,8 +17,23 @@
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#projects">Porjects</a></li>
                 <li><a href="#contacts">Contacts</a></li>
-
             </ul>
+        </div>        
+    </nav>
+    <nav id="hambergur-nav">
+        <div class="logo">DHARMENDRA SHAW</div>
+        <div class="hambergur-menu">
+            <div class="hambergur-icon" onclick="toggleMenu()">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <div class="menu-links">
+                <li><a href="#about" onclick="toggleMenu()">About</a></li>
+                <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
+                <li><a href="#projects" onclick="toggleMenu()">Porjects</a></li>
+                <li><a href="#contacts" onclick="toggleMenu()">Contacts</a></li>
+            </div>
         </div>
     </nav>
     <script src="me-scripts.js"></script>
