hamberger style added

--- a/me.html
+++ b/me.html
@@ -20,10 +20,10 @@
             </ul>
         </div>        
     </nav>
-    <nav id="hambergur-nav">
+    <nav id="hamburger-nav">
         <div class="logo">DHARMENDRA SHAW</div>
-        <div class="hambergur-menu">
-            <div class="hambergur-icon" onclick="toggleMenu()">
+        <div class="hamburger-menu">
+            <div class="hamburger-icon" onclick="toggleMenu()">
                 <span></span>
                 <span></span>
                 <span></span>
