profile pic added

--- a/me.html
+++ b/me.html
@@ -36,6 +36,11 @@
             </div>
         </div>
     </nav>
+    <section id ="profile">
+        <div class="section__pic-container">
+            <img src="./assets/profile-pic.jpg" alt="Dharmendra Shaw">
+        </div>
+    </section>
     <script src="me-scripts.js"></script>
 </body>
 </html>
