--- a/me.html
+++ b/me.html
@@ -38,7 +38,26 @@
     </nav>
     <section id ="profile">
         <div class="section__pic-container">
-            <img src="./assets/profile-pic.jpg" alt="Dharmendra Shaw">
+            <img src="./assets/profile-pic.jpg" alt="Dharmendra Shaw's profile picture">
+        </div>
+        <div class="section__text">
+            <p class="section__text__p1">Hello I'am</p>
+            <h1>Dharmendra Shaw</h1>
+            <P>
+                Software Developer
+            </P>
+            <div class="btn-container">
+                <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">
+                    Download CV
+                </button>
+                <button class="btn btn-color-1" onclick="location.href='./#contacts'">
+                    Contact Info
+                </button>
+            </div>
+            <div id ="social-container">
+                <img src="./assets/linkedin.png" alt="My linkedin Profile" class="icon" onclick="location.href='https://linkedin.com/'"/>
+                <img src="./assets/github.png" alt="My github Profile" class="icon" onclick="location.href='https://github.com/dharm7nd'"/>
+            </div>
         </div>
     </section>
     <script src="me-scripts.js"></script>
