--- a/me.html
+++ b/me.html
@@ -41,9 +41,9 @@
             <img src="./assets/profile-pic.jpg" alt="Dharmendra Shaw's profile picture">
         </div>
         <div class="section__text">
-            <p class="section__text__p1">Hello I'am</p>
-            <h1>Dharmendra Shaw</h1>
-            <P>
+            <p class="section__text__p1">Hello I'm</p>
+            <h1 class="title">Dharmendra Shaw</h1>
+            <P class="section__text__p2">
                 Software Developer
             </P>
             <div class="btn-container">
