--- a/me.html
+++ b/me.html
@@ -60,6 +60,22 @@
             </div>
         </div>
     </section>
+    <section id="about">
+        <p class="section__text__p1">Get To Know Me</p>
+        <H1 class="title">About Me</H1>
+        <div class="section-container">
+            <div class="section__pic-container">
+                <img src="./assets/about-pic.png" alt="Profile picture" class="about-pic"/>
+            </div>
+        </div>
+        <div class="about-details-container">
+            <div class="about-containers">
+                <div class="details-container">
+                    <img src="./assets/experience.png" alt="Experience Icon" class="icon"/>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="me-scripts.js"></script>
 </body>
 </html>
