--- a/me.html
+++ b/me.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MEEE PORTOFOLIO</title>
+    <title>MEEE PORTFOLIO</title>
 </head>
 <link rel="stylesheet" href="mestyles.css">
 <link rel="stylesheet" href="me-mediaqurries.css">
@@ -38,7 +38,7 @@
     </nav>
     <section id ="profile">
         <div class="section__pic-container">
-            <img src="./assets/profile-pic.jpg" alt="Dharmendra Shaw's profile picture">
+            <img src="./assets/profile-pic.jpg" alt="Dharmendra Shaw's profile picture" class="pic"/>
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello I'm</p>
@@ -65,7 +65,7 @@
         <H1 class="title">About Me</H1>
         <div class="section-container">
             <div class="section__pic-container">
-                <img src="./assets/about-pic.png" alt="Profile picture" class="about-pic"/>
+                <img src="./assets/image.png" alt="Profile picture" class="about-pic"/>
             </div>
         </div>
         <div class="about-details-container">
