--- a/me.html
+++ b/me.html
@@ -38,7 +38,7 @@
     </nav>
     <section id ="profile">
         <div class="section__pic-container">
-            <img src="./assets/profile-pic.jpg" alt="Dharmendra Shaw's profile picture" class="pic"/>
+            <img src="./assets/profile-pic.jpg" alt="Dharmendra Shaw's profile picture" />
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello I'm</p>
@@ -72,9 +72,18 @@
             <div class="about-containers">
                 <div class="details-container">
                     <img src="./assets/experience.png" alt="Experience Icon" class="icon"/>
+                    <h3>Experience</h3>
+                    <p>Fresher <br>Full Stack Development</p>
+                </div>
+                <div class="details-container">
+                    <img src="./assets/education.png" alt="education Icon" class="icon"/>
+                    <h3>Education</h3>
+                    <p>B.Tech CSE<br>DAV PUBLIC SCHOOL</p>
                 </div>
             </div>
+            
         </div>
+
     </section>
     <script src="me-scripts.js"></script>
 </body>
