--- a/me.html
+++ b/me.html
@@ -80,6 +80,12 @@
                     <p>B.Tech CSE<br>DAV PUBLIC SCHOOL</p>
                 </div>
             </div>
+            <div class="text-container">
+                <p><br>I am a third-year B.Tech CSE student at Amity University Kolkata, passionate about technology and innovation. <br> I delve into subjects like Compiler Construction and am expanding my expertise in system designing.
+
+                    I've worked on projects like an Educational Compiler Simulator and an AI-Powered Health Monitoring App. <br> 
+                    My goal is to further my knowledge in software development and research.</p>
+            </div>
 
         </div>
 
