about section completed

--- a/me.html
+++ b/me.html
@@ -85,10 +85,10 @@
 
                     I've worked on projects like an Educational Compiler Simulator and an AI-Powered Health Monitoring App. <br> 
                     My goal is to further my knowledge in software development and research.</p>
+                </div>
             </div>
-
         </div>
-
+        <img src="./assets/arrow.png" alt="Arrow Icon" class="arrow icon" onclick="location.href='./experience'">
     </section>
     <script src="me-scripts.js"></script>
 </body>
