experienced section over

--- a/me.html
+++ b/me.html
@@ -88,9 +88,9 @@
                 </div>
             </div>
         </div>
-        <img src="./assets/arrow.png" alt="Arrow Icon" class="arrow icon" onclick="location.href='./experience'">
+        <img src="./assets/arrow.png" alt="Arrow Icon" class="arrow icon" onclick="location.href='./#experience'">
     </section>
-    <section id="Experience">
+    <section id="experience">
         <p class="section__text__p1">
             Explore My
         </p>
@@ -112,42 +112,166 @@
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
                             <div>
-                                <h3>HTML</h3>
+                                <h3>CSS(Tailwind)</h3>
                                 <P>Intermediate</P>
                             </div>
                         </article>
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
                             <div>
-                                <h3>HTML</h3>
-                                <P>Intermediate</P>
+                                <h3>Javascript</h3>
+                                <P>Basic</P>
                             </div>
                         </article>
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
                             <div>
-                                <h3>HTML</h3>
-                                <P>Intermediate</P>
+                                <h3>React</h3>
+                                <P>Basic</P>
                             </div>
                         </article>
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
                             <div>
-                                <h3>HTML</h3>
-                                <P>Intermediate</P>
+                                <h3>TypeScript</h3>
+                                <P>Basic</P>
                             </div>
                         </article>
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
                             <div>
-                                <h3>HTML</h3>
-                                <P>Intermediate</P>
+                                <h3>Material UI</h3>
+                                <P>Basic</P>
                             </div>
                         </article>
                     </div>
                 </div>
+                <div class="details-container">
+                    <h2 class="experience-sub-title">
+                        Backend Development
+                    </h2>
+                    <div class="article-container">
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                            <div>
+                                <h3>MongoDB</h3>
+                                <P>Basic</P>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                            <div>
+                                <h3>Node js</h3>
+                                <P>Basic</P>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                            <div>
+                                <h3>Express js</h3>
+                                <P>Basic</P>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                            <div>
+                                <h3>Git</h3>
+                                <P>Basic</P>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+                <div class="details-container">
+                    <h2 class="experience-sub-title">
+                         Programming Language
+                    </h2>
+                    <div class="article-container">
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                            <div>
+                                <h3>C</h3>
+                                <P>Basic</P>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                            <div>
+                                <h3>JAVA</h3>
+                                <P>Basic</P>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                            <div>
+                                <h3>Python</h3>
+                                <P>Basic</P>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                            <div>
+                                <h3>Kotlin</h3>
+                                <P>Basic</P>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                            <div>
+                                <h3>Swift</h3>
+                                <P>Basic</P>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+                <!-- <div class="details-container">
+                    <h2 class="experience-sub-title">
+                          Technical Skills
+                    </h2>
+                    <div class="article-container">
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                            <div>
+                                <h3>Cloud Computing(AWS)</h3>
+                                <P>Basic</P>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                            <div>
+                                <h3>POWER BI</h3>
+                                <P>Basic</P>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                            <div>
+                                <h3>Linux(Ubuntu)</h3>
+                                <P>Basic</P>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                            <div>
+                                <h3>Docker</h3>
+                                <P>Basic</P>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience Icon" class="icon">
+                            <div>
+                                <h3>Kubernetes</h3>
+                                <P>Basic</P>
+                            </div>
+                        </article>
+                    </div>
+                </div> -->
             </div>
         </div>
+        <img src="./assets/arrow.png" alt="Arrow Icon" class="icon arrow" onclick="location.href='./#projects'">
+
+    </section>
+    <section id="projects">
+        
     </section>
 
     <script src="me-scripts.js"></script>
