--- a/me.html
+++ b/me.html
@@ -356,22 +356,41 @@
           onclick="location.href='./#contact'"
         />
       </section>
-    <section id="contacts">
-        <p class="section__text__p1">
-            Get In Touch
-        </p>
+      <section id="contact">
+        <p class="section__text__p1">Get in Touch</p>
         <h1 class="title">Contact Me</h1>
         <div class="contact-info-upper-container">
-            <div class="contact-info-container">
-                <img src="./assets/email.png" alt="Email icon" class="icon contact-icon">
-                <p><a href="mailto:shaw.dharmendra02@gmail.com">shaw.dharmendra02@gmail.com</a></p>
-            </div>
-            <div class="contact-info-container">
-                <img src="./assets/linkedin.png" alt="linkedin icon" class="icon contact-icon">
-                <p><a href="https://www.linkedin.com/in/dharmendra-s-a348162a7">LinkedIn</a></p>
-            </div>
+          <div class="contact-info-container">
+            <img
+              src="./assets/email.png"
+              alt="Email icon"
+              class="icon contact-icon email-icon"
+            />
+            <p><a href="mailto:shaw.dharmendra02@gmail.com">shaw.dharmendra02@gmail.com</a></p>
+          </div>
+          <div class="contact-info-container">
+            <img
+              src="./assets/linkedin.png"
+              alt="LinkedIn icon"
+              class="icon contact-icon"
+            />
+            <p><a href="https://www.linkedin.com/in/dharmendra-s-a348162a7/">LinkedIn</a></p>
+          </div>
         </div>
-    </section>
+      </section>
+      <footer>
+        <nav>
+            <div class="nav-links-container">
+                <ul class="nav-links">
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#experience">Experience</a></li>
+                    <li><a href="#projects">Porjects</a></li>
+                    <li><a href="#contacts">Contacts</a></li>
+                </ul>
+            </div>
+        </nav>
+        <p>Copyright &#169 2024 Dharmendra Shaw. All Rights Reserved. </p>
+      </footer>
     <script src="me-scripts.js"></script>
 </body>
 </html>
