--- a/me.html
+++ b/me.html
@@ -47,7 +47,7 @@
                 Software Developer
             </P>
             <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">
+                <button class="btn btn-color-2" onclick="window.open('./assets/DHARMENDRA SHAW.pdf')">
                     Download CV
                 </button>
                 <button class="btn btn-color-1" onclick="location.href='./#contacts'">
