--- a/me.html
+++ b/me.html
@@ -44,7 +44,7 @@
             <p class="section__text__p1">Hello I'm</p>
             <h1 class="title">Dharmendra Shaw</h1>
             <P class="section__text__p2">
-                Software Developer
+                COMPUTER SCIENCE STUDENT
             </P>
             <div class="btn-container">
                 <button class="btn btn-color-2" onclick="window.open('./assets/DHARMENDRA SHAW.pdf')">
@@ -65,7 +65,7 @@
         <H1 class="title">About Me</H1>
         <div class="section-container">
             <div class="section__pic-container">
-                <img src="./assets/image.png" alt="Profile picture" class="about-pic"/>
+                <img src="./assets/image copy.png" alt="Profile picture" class="about-pic"/>
             </div>
         <div class="about-details-container">
             <div class="about-containers">
