--- a/me.html
+++ b/me.html
@@ -278,22 +278,22 @@
             <div class="details-container color-container">
               <div class="article-container">
                 <img
-                  src="./assets/project-1.png"
+                  src="./assets/compiler.avif"
                   alt="Project 1"
                   class="project-img"
                 />
               </div>
-              <h2 class="experience-sub-title project-title">Project One</h2>
+              <h2 class="experience-sub-title project-title">Compiler Visualizer</h2>
               <div class="btn-container">
                 <button
                   class="btn btn-color-2 project-btn"
-                  onclick="location.href='https://github.com/'"
+                  onclick="location.href='https://github.com/dharm7nd/'"
                 >
                   Github
                 </button>
                 <button
                   class="btn btn-color-2 project-btn"
-                  onclick="location.href='https://github.com/'"
+                  onclick="location.href='https://github.com/dham7nd/'"
                 >
                   Live Demo
                 </button>
@@ -302,22 +302,22 @@
             <div class="details-container color-container">
               <div class="article-container">
                 <img
-                  src="./assets/project-2.png"
+                  src="./assets/donation.jpg"
                   alt="Project 2"
                   class="project-img"
                 />
               </div>
-              <h2 class="experience-sub-title project-title">Project Two</h2>
+              <h2 class="experience-sub-title project-title">DMS</h2>
               <div class="btn-container">
                 <button
                   class="btn btn-color-2 project-btn"
-                  onclick="location.href='https://github.com/'"
+                  onclick="location.href='https://github.com/dharm7nd/SEVVA.git'"
                 >
                   Github
                 </button>
                 <button
                   class="btn btn-color-2 project-btn"
-                  onclick="location.href='https://github.com/'"
+                  onclick="location.href='https://github.com/dharm7nd/SEVVA.git'"
                 >
                   Live Demo
                 </button>
@@ -326,12 +326,12 @@
             <div class="details-container color-container">
               <div class="article-container">
                 <img
-                  src="./assets/project-3.png"
+                  src="./assets/cloud.jpg"
                   alt="Project 3"
                   class="project-img"
                 />
               </div>
-              <h2 class="experience-sub-title project-title">Project Three</h2>
+              <h2 class="experience-sub-title project-title">Cloud browser</h2>
               <div class="btn-container">
                 <button
                   class="btn btn-color-2 project-btn"
